# ForgeDesk

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release-linux-x64.yml  release-windows-arm64.yml
scripts/: generate-protocol.mjs  inspect-thread-history.mjs  smoke-app-server.mjs  test-forgedesk-webview.ps1
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  router.rs
src/components/: ApprovalDialog.tsx  AutomationsView.tsx  CloudView.tsx  Composer.test.tsx  Composer.tsx  ExtensionsView.tsx  Inspector.test.tsx  Inspector.tsx  SettingsView.test.tsx  SettingsView.tsx  Sidebar.tsx  ThreadView.test.tsx  ThreadView.tsx  Workspace.tsx
src/lib/: bridge.ts  format.ts  types.ts
src/store/: useAppStore.test.ts  useAppStore.ts  usePreferencesStore.ts
tests/e2e/: workspace.spec.ts
